<resources>
    <string name="app_name">Wecker</string>
    <string name="select_alarm_time">Weckzeit wählen</string>
    <string name="set_alarm">Alarm setzen</string>
    <string name="cancel_alarm">Alarm abbrechen</string>
    <string name="open_settings">Snooze-Einstellungen</string>
    <string name="alarm_set_message">Alarm gesetzt für %1$s</string>
    <string name="alarm_cancelled">Alarm abgebrochen</string>
    <string name="alarm_ring_text">Alarm klingelt</string>
    <string name="snooze">Snooze</string>
    <string name="snooze_notification_title">Snooze aktiv</string>
    <string name="snooze_notification_body">Neuer Alarm um %1$s</string>
    <string name="exact_alarm_permission_needed">Bitte „Exakte Alarme“ für die App erlauben.</string>
</resources>
